What's New in Python 2.2.3 ?
Release date: XX-XXX-2003
============================

- Some horridly obscure problems were fixed involving interaction
  between garbage collection and classes with "ambitious" getattr hooks.
  If a class instance didn't have a __del__ method, but did have a
  __getattr__ hook, and the instance became reachable only from an
  unreachable cycle, and the hook resurrected or deleted unreachable
  objects when asked to resolve "__del__", anything up to a segfault
  could happen.  That's been repaired.

- Skip locale test on Mac OS X.

- Backported the "largefile" requirement for test_largefile on Mac OS X.

- SF #710576: Backport of fix for #663074, to implement per-interpreter
  codecs registries. This adds new members at the end of
  PyInterpreterState.

- SF #705836: The platform-independent routines for packing floats in
  IEEE formats (struct.pack's <f, >f, <d, and >d codes; pickle and
  cPickle's protocol 1 pickling of floats) ignored that rounding can
  cause a carry to propagate.  The worst consequence was that, in rare
  cases, <f and >f could produce strings that, when unpacked again,
  were a factor of 2 away from the original float.  This has been
  fixed.

- Backported SF patch #676342: after using pdb, the readline command
  completion was botched.

- Fix problem building on OSF1 because the compiler only accepted
  preprocessor directives that start in column 1.  (SF bug #691793.)

- Fixed two places in PyObject_Generic{Get,Set}Attr() where the
  tp_descr_{get,set} slot of a descriptor's type was accessed without
  checking tp_flags whether those slots actually exist.  This could
  cause segfaults in Zope.

- The imp module now has ways to acquire and release the "import
  lock": imp.acquire_lock() and imp.release_lock().  Note: this is a
  reentrant lock, so releasing the lock only truly releases it when
  this is the last release_lock() call.  You can check with
  imp.lock_held().  (SF bug #580952 and patch #683257.)
